# polaris-sdks

./: .gitignore  README.md
ai/: package-lock.json  package.json
ai/src/: index.ts
ai/src/tools/: polaris-contradictions.ts  polaris-crawl.ts  polaris-events.ts  polaris-forecast.ts  polaris-timeline.ts  polaris-web-search.ts
crewai-polaris/: pyproject.toml
crewai-polaris/crewai_polaris/: __init__.py  tools.py
crewai-veroq/: pyproject.toml
crewai-veroq/crewai_veroq/: tools.py
langchain-veroq/: pyproject.toml
langchain-veroq/langchain_veroq/: retrievers.py  tools.py
n8n-veroq/: README.md  package.json
n8n-veroq/src/credentials/: VeroqApi.credentials.ts
n8n-veroq/src/nodes/: Veroq.node.ts
python/: README.md  pyproject.toml
python/langchain_polaris/: README.md  __init__.py  pyproject.toml  tools.py
python/langchain_polaris/tests/: test_tools.py
python/polaris_news/: __init__.py  agent.py  async_client.py  client.py  types.py
typescript/: README.md  package.json
typescript/src/: agent.ts  client.ts  index.ts  types.ts
veroq-ai/: README.md  package.json
veroq-ai/src/: index.ts
veroq-ai/src/tools/: _fetch.ts  veroq-backtest.ts  veroq-brief.ts  veroq-compare.ts  veroq-competitors.ts  veroq-contradictions.ts  veroq-correlation.ts  veroq-crawl.ts  veroq-entities.ts  veroq-events-calendar.ts  veroq-events.ts  veroq-extract.ts  veroq-feed.ts  veroq-forecast.ts  veroq-generate-report.ts  veroq-get-report.ts  veroq-news-impact.ts  veroq-portfolio-feed.ts  veroq-research.ts  veroq-screener.ts  veroq-search.ts  veroq-sectors.ts  veroq-ticker-history.ts  veroq-ticker-resolve.ts  veroq-ticker-score.ts  veroq-ticker.ts  veroq-timeline.ts  veroq-trending.ts  veroq-verify.ts  veroq-web-search.ts
veroq-cli/: README.md  action.yml  package.json
veroq-python/: README.md  pyproject.toml
veroq-python/veroq/: __init__.py  agent.py  async_client.py  cli.py  client.py  shield.py
veroq-sdk/: README.md  package.json
veroq-sdk/src/: agent.ts  cli.ts  client.ts  index.ts  shield.ts
