[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-polaris"
version = "0.3.0"
description = "Polaris News tools for CrewAI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "The Polaris Report", email = "dev@thepolarisreport.com" },
]
keywords = ["polaris", "news", "crewai", "agent", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "polaris-news>=0.2.0",
    "crewai>=0.80.0",
]

[project.urls]
Homepage = "https://thepolarisreport.com"
Documentation = "https://thepolarisreport.com/docs"
Repository = "https://github.com/JohnnyTarrr/polaris-sdks"
