[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewai-veroq"
version = "2.0.0"
description = "VEROQ Intelligence tools for CrewAI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "VEROQ", email = "dev@veroq.ai" },
]
keywords = ["veroq", "news", "crewai", "agent", "tools", "intelligence"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "veroq>=2.0.0",
    "crewai>=0.80.0",
]

[project.urls]
Homepage = "https://veroq.ai"
Documentation = "https://veroq.ai/docs"
Repository = "https://github.com/veroq-ai/crewai-veroq"
