[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-veroq"
version = "2.0.0"
description = "LangChain tools for VEROQ Intelligence API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "VEROQ", email = "dev@veroq.ai" },
]
keywords = ["langchain", "veroq", "news", "knowledge", "ai", "agents", "tools", "retriever", "intelligence"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "polaris-news>=0.6.0",
    "langchain-core>=0.1.0",
]

[project.urls]
Homepage = "https://veroq.ai"
Documentation = "https://veroq.ai/docs"
Repository = "https://github.com/Polaris-API/langchain-veroq"

[tool.hatch.build.targets.wheel]
packages = ["langchain_veroq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
